--- a/infra.docker-compose.yaml
+++ b/infra.docker-compose.yaml
@@ -4,7 +4,7 @@ version: '3.1'
 services:
 
   db:
-    image: mysql
+    image: mysql:5.7
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     ports:
@@ -15,7 +15,7 @@ services:
       MYSQL_USER: todo
       MYSQL_PASSWORD: password
     volumes:
-        - django-db:/var/lib/mysql
+        - ~/mysql/:/var/lib/mysql:delegated
 
   adminer:
     image: adminer
