--- a/todobackend/Docker/dev/docker-compose.yml
+++ b/todobackend/Docker/dev/docker-compose.yml
@@ -35,21 +35,23 @@ services:
             - ../../../target:/wheelhouse
             - build:/build
         entrypoint: "entrypoint.sh"
-        command: ["pip", "wheel", "--no-index", "-f /build", "."]
+        command: ["pip", "wheel", "-f /build", "."]
 
     db:
         image: mysql:5.7
         hostname: db
         command: --default-authentication-plugin=mysql_native_password
-        expose: 
-            - "3306"
+        ports: 
+            - 3306:3306
         environment: 
             MYSQL_ROOT_PASSWORD: password
             MYSQL_DATABASE: todobackend
             MYSQL_USER: todo
             MYSQL_PASSWORD: password
+            MYSQL_ROOT_HOST: "%"
         volumes:
-            - ~/mysql_db/:/var/lib/mysql:delegated
+            - ./mysql57_db:/var/lib/mysql:delegated
         
 volumes: 
     build:
+    mysql57_db:
