self-containing ansible

--- a/todobackend/Docker/dev/docker-compose.yml
+++ b/todobackend/Docker/dev/docker-compose.yml
@@ -17,12 +17,10 @@ services:
         restart: on-failure
     
     agent:
-        image: philm/ansible_playbook
+        image: reboot87/ansible
         environment:
             PROBE_HOST: "db"
             PROBE_PORT: "3306"
-        volumes:
-            - ../../ansible:/ansible/playbooks
         command: ["probe.yaml"]
         depends_on:
             - db
