--- a/todobackend/makefile
+++ b/todobackend/makefile
@@ -10,12 +10,30 @@ REL_COMPOSE_FILE := docker/release/docker-compose.yml
 REL_PROJECT := $(PROJECT_NAME)$(BUILD_ID)
 DEV_PROJECT := $(REL_PROJECT)dev
 
+# Application service name - must match Docker compose release service name
+APP_SERVICE_NAME := app
+
+# Build tag expression - can be used to evaulate a shell expression at runtime
+BUILD_TAG_EXPRESSION ?= date -u +%Y%m%d%H%M%S
+
+# Execute shell expression
+BUILD_EXPRESSION := $(shell $(BUILD_TAG_EXPRESSION))
+
+# Build tag - defaults to BUILD_EXPRESSION if not defined
+BUILD_TAG ?= $(BUILD_EXPRESSION)
+
 # Check and Inspect Logic
 INSPECT := $$(docker-compose -p $$1 -f $$2 ps -q $$3 | xargs -I ARGS docker inspect -f "{{ .State.ExitCode }}" ARGS)
 
 CHECK := @bash -c '\
 	if [[ $(INSPECT) -ne 0 ]]; \
 	then exit $(INSPECT); fi' VALUE
+
+# Use these settings to specify a custom Docker registry
+DOCKER_REGISTRY ?= docker.io
+
+# Set DOCKER_REGISTRY_AUTH to auth endpoint for private registry
+DOCKER_REGISTRY_AUTH ?= 
 
 .PHONY: test build release clean
 
@@ -49,26 +67,47 @@ release:
 	docker-compose -p $(REL_PROJECT) -f $(REL_COMPOSE_FILE) up test
 	docker cp $$(docker-compose -p $(REL_PROJECT) -f $(REL_COMPOSE_FILE) ps -q test):/reports/. reports
 	${CHECK} $(REL_PROJECT) $(REL_COMPOSE_FILE) test
-	docker-compose -p $(REL_PROJECT) -f $(REL_COMPOSE_FILE) kill
-	docker-compose -p $(REL_PROJECT) -f $(REL_COMPOSE_FILE) rm -f	
+	# docker-compose -p $(REL_PROJECT) -f $(REL_COMPOSE_FILE) kill
+	# docker-compose -p $(REL_PROJECT) -f $(REL_COMPOSE_FILE) rm -f	
 	${INFO} "Release environment stopped"
 
-# Not working... needs looking into. works when running seperatley from folders...
+# Not working... needs looking into. The app backend is not starting. works when running seperatley from folders...
 # app:
 # 	docker-compose -p $(REL_PROJECT) -f ../../todobackend-client/docker-compose.yml up -d && \
 # 		docker-compose -p $(REL_PROJECT) -f $(REL_COMPOSE_FILE) up -d app 
 
 clean:
 	${INFO} "Destroying development environment..."
-	docker-compose -p $(DEV_PROJECT) -f $(DEV_COMPOSE_FILE) kill
-	docker-compose -p $(DEV_PROJECT) -f $(DEV_COMPOSE_FILE) rm -fv
-	docker-compose -p $(REL_PROJECT) -f $(REL_COMPOSE_FILE) kill
-	docker-compose -p $(REL_PROJECT) -f $(REL_COMPOSE_FILE) rm -fv	
-	docker-compose -p $(REL_PROJECT) -f ../../todobackend-client/docker-compose.yml kill
-	docker-compose -p $(REL_PROJECT) -f ../../todobackend-client/docker-compose.yml rm -f
+	docker-compose -p $(DEV_PROJECT) -f $(DEV_COMPOSE_FILE) down -v
+	docker-compose -p $(REL_PROJECT) -f $(REL_COMPOSE_FILE) down -v
+	docker-compose -p $(REL_PROJECT) -f ../../todobackend-client/docker-compose.yml down -v
 	docker images -q -f dangling=true | xargs -I ARGS docker rmi -f ARGS
 	${INFO} "Clean complete"
 
+tag:
+	${INFO} "Tagging release image with tags $(TAG_ARGS)..."
+	@ $(foreach tag,$(TAG_ARGS), docker tag $(IMAGE_ID) $(DOCKER_REGISTRY)/$(ORG_NAME)/$(REPO_NAME):$(tag);)
+	${INFO} "Tagging complete"
+
+buildtag:
+	${INFO} "Tagging release image with suffix $(BUILD_TAG) and build tags $(BUILDTAG_ARGS)..."
+	@ $(foreach tag,$(BUILDTAG_ARGS), docker tag $(IMAGE_ID) $(DOCKER_REGISTRY)/$(ORG_NAME)/$(REPO_NAME):$(tag).$(BUILD_TAG);)
+	${INFO} "Tagging complete"
+
+login:
+	${INFO} "Logging in to Docker registry $$DOCKER_REGISTRY..."
+	@ docker login -u $$DOCKER_USER -p $$DOCKER_PASSWORD $(DOCKER_REGISTRY_AUTH)
+	${INFO} "Logged in to Docker registry $$DOCKER_REGISTRY"
+
+logout:
+	${INFO} "Logging out of Docker registry $$DOCKER_REGISTRY..."
+	@ docker logout
+	${INFO} "Logged out of Docker registry $$DOCKER_REGISTRY"	
+
+publish:
+	${INFO} "Publishing release image $(IMAGE_ID) to $(DOCKER_REGISTRY)/$(ORG_NAME)/$(REPO_NAME)..."
+	@ $(foreach tag,$(shell echo $(REPO_EXPR)), docker push $(tag);)
+	${INFO} "Publish complete"	
 
 # Cosmetics
 YELLOW := "\e[1;33m"
@@ -79,3 +118,37 @@ INFO := @bash -c '\
 	printf $(YELLOW); \
 	echo "=> $$1"; \
 	printf $(NC)' VALUE
+
+# Get container id 
+APP_CONTAINER_ID := $$(docker-compose -p $(REL_PROJECT) -f $(REL_COMPOSE_FILE) ps -q $(APP_SERVICE_NAME))
+
+# Get image id of application service
+IMAGE_ID := $$(docker inspect -f '{{ .Image }}' $(APP_CONTAINER_ID))
+
+# Repository Filter
+ifeq ($(DOCKER_REGISTRY), docker.io)
+	REPO_FILTER := $(ORG_NAME)/$(REPO_NAME)[^[:space:]|\$$]*
+else
+	REPO_FILTER := $(DOCKER_REGISTRY)/$(ORG_NAME)/$(REPO_NAME)[^[:space:]|\$$]*
+endif
+
+# Introspect repository tags
+REPO_EXPR := $$(docker inspect -f '{{range .RepoTags}}{{.}} {{end}}' $(IMAGE_ID) | grep -oh "$(REPO_FILTER)" | xargs)
+
+# Extract build tag arguments
+ifeq (buildtag,$(firstword $(MAKECMDGOALS)))
+	BUILDTAG_ARGS := $(wordlist 2,$(words $(MAKECMDGOALS)),$(MAKECMDGOALS))
+  ifeq ($(BUILDTAG_ARGS),)
+  	$(error You must specify a tag)
+  endif
+  $(eval $(BUILDTAG_ARGS):;@:)
+endif
+
+# Extract tag arguments
+ifeq (tag,$(firstword $(MAKECMDGOALS)))
+  TAG_ARGS := $(wordlist 2,$(words $(MAKECMDGOALS)),$(MAKECMDGOALS))
+  ifeq ($(TAG_ARGS),)
+    $(error You must specify a tag)
+  endif
+  $(eval $(TAG_ARGS):;@:)
+endif
